assets/css/wiki.css
/* Font Awesome 4.7.0 */
html {
  box-sizing: border-box; }

*, *:before, *:after {
  box-sizing: inherit; }

/*
svg {
    display: inline-flex;
    width: 1em;
    height: 1em;
    stroke-width: 0;
    stroke: currentColor;
    fill: currentColor;
    align-self: center;
    bottom: -0.125em;
    position: absolute;
}
*/
.svg-icon {
  display: inline-flex;
  align-self: center;
  position: relative;
  height: 1em;
  width: 1em; }

.svg-icon svg {
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  align-self: center;
  height: 1em;
  width: 1em;
  bottom: -0.125em;
  position: absolute;
  z-index: 0; }
  .svg-icon svg.history {
    width: 1.0625em; }

/* ==========================================
Single-colored icons can be modified like so:
.icon-name {
  font-size: 32px;
  color: red;
}
========================================== */
.icon-price-tags {
  width: 1.25em; }

a {
  color: #1779ba;
  text-decoration: none; }
  a:visited {
    color: #ba5817; }
  a:hover {
    text-decoration: underline;
    color: #65b6ec; }

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  margin: 0;
  font-size: 0.85em;
  line-height: 1.5;
  background-color: #fefefe;
  display: grid;
  grid-column-gap: 20px;
  grid-row-gap: 0;
  grid-template-areas: "header" "tabs" "content" "nav" "search" "footer"; }

body > header {
  grid-area: header;
  max-height: 3.5rem;
  min-height: 3.5rem;
  align-self: center; }
  body > header > h1 {
    margin: 0 0.5rem; }

body > main {
  grid-area: content;
  background-color: #202020;
  color: #fefefe;
  padding: 1rem; }
  body > main > footer {
    text-align: right;
    color: #8a8a8a;
    font-size: 75%; }
    body > main > footer > ul {
      list-style-type: none; }
  body > main > nav {
    float: right;
    background-color: black; }
    body > main > nav ul {
      margin: 0 1rem;
      list-style-type: upper-roman; }

body > nav {
  grid-area: nav; }
  body > nav ul {
    margin: 0;
    padding: 5px 0;
    list-style-type: none; }
  body > nav fieldset {
    margin: 0.5rem; }

body > footer {
  grid-area: footer;
  text-align: center;
  font-size: 80%; }

div.searchwiki {
  grid-area: search;
  align-self: center;
  margin: 0 0.5rem; }

.tabs {
  grid-area: tabs;
  margin: 0;
  padding: 0;
  list-style-type: none;
  align-self: end;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row; }
  .tabs li {
    padding-top: 5px; }
    .tabs li.is-active a {
      background-color: #202020;
      color: #fefefe; }
    .tabs li a {
      padding: 5px;
      margin: 0;
      border: 1px dashed #202020; }
      .tabs li a:hover {
        background-color: #202020; }

.stat {
  color: #8a8a8a; }

.frontmatter {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  justify-content: space-between;
  background-color: #2d2d2d;
  color: #fefefe;
  padding: 0 10px; }
  .frontmatter li {
    text-align: center; }
  .frontmatter li > p {
    font-size: 120%;
    margin: 0; }

td, th {
  border: 1px solid #999;
  padding: 0.5rem; }

table {
  border-collapse: collapse; }

#notification {
  z-index: 1;
  position: fixed;
  top: -2.3em;
  left: 0;
  height: 2.3em;
  width: 100%;
  padding: 0 1em;
  overflow: hidden;
  background: #f9edbe;
  border-bottom: 1px solid #f0c36d; }
  #notification p {
    margin: 5px; }

#notification.anim {
  -webkit-transition: top 0.6s ease-out;
  -moz-transition: top 0.6s ease-out;
  -ms-transition: top 0.6s ease-out;
  -o-transition: top 0.6s ease-out;
  transition: top 0.6s ease-out; }

#notification.active {
  top: 0; }

.close-button {
  display: inline-block; }

textarea#wikieditor {
  min-height: 20rem;
  width: 100%; }

ul.tags {
  list-style-type: none;
  align-self: center;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  padding: 0;
  margin: 0; }
  ul.tags li {
    padding: 1px 5px;
    background-color: #073642;
    border: none;
    border-radius: 10px 0;
    margin: 0 5px; }

span.label {
  padding: 0 5px;
  background-color: #464646; }

pre, code {
  white-space: pre-wrap;
  background: #073642; }

.input-wrapper {
  display: flex; }
  .input-wrapper input[type=text] {
    flex: 1;
    box-sizing: border-box;
    width: 100%;
    min-width: 10px; }

.preview-tabs {
  background: #606060;
  margin: 0;
  padding: 0;
  list-style-type: none;
  align-self: end;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row; }
  .preview-tabs li {
    padding-top: 5px; }
    .preview-tabs li a {
      display: inline-block;
      position: relative;
      border: none;
      outline: none;
      vertical-align: bottom;
      cursor: pointer;
      background: #606060;
      color: #fefefe;
      text-decoration: none;
      padding: 5px;
      margin: 0; }
      .preview-tabs li a:hover {
        background-color: #202020; }
      .preview-tabs li a.is-active {
        border-bottom: 2px solid white;
        background: black; }

.tabcontent {
  display: none; }

.button {
  background-color: #4CAF50;
  /* Green */
  border: none;
  color: white;
  padding: 5px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block; }

.button.delete {
  background-color: #f44336; }

@media (min-width: 768px) {
  body {
    font-size: 1em;
    grid-template-areas: "header search" "nav    tabs" "nav    content" "nav    footer";
    grid-template-columns: 240px 10fr;
    grid-template-rows: 50px 24px auto minmax(10px, 50px); }

  div.searchwiki {
    justify-self: end; }

  .tabs {
    flex-direction: row; }
    .tabs li {
      margin: 0 10px 0 0; }

  body > main {
    align-self: start; }

  .frontmatter {
    display: flex;
    flex-direction: row; } }

/*# sourceMappingURL=wiki.css.map */

